<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.first.weatherapp.MainActivity">

<include
    android:id="@+id/toolbar"
    layout="@layout/toolbar"
    />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"

        android:id="@+id/current_city_layout">


        <TextView
            android:text="@string/cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_details_text"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/set_current_city_text"
            android:visibility="invisible"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:id="@+id/image_view"
            android:layout_below="@+id/weather_details_text"
            android:visibility="invisible">
        </ImageView>


        <TextView
            android:text="@string/cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temparature_details_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/image_view"
            android:visibility="invisible"
            android:textColor="@color/colorBlack" />


        <TextView
            android:text="@string/cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_details_text"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/temparature_details_text"
            android:visibility="invisible"
            android:textColor="@color/colorBlack" />


        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_city_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/progressBar"
            android:visibility="invisible"/>

        <Button
            android:text="@string/setCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_city_btn"
            android:layout_below="@+id/set_current_city_text"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/cs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/set_current_city_text"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="14dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <EditText
        android:text="US"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/city_name_text"
        android:layout_alignRight="@+id/city_name_text"
        android:layout_alignEnd="@+id/city_name_text"
        android:hint="@string/hintForCountryName"
        android:id="@+id/editText2"
        android:textColor="@color/colorBlack" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/cities_display_text"
        android:id="@+id/my_recycler_view_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/searchCityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_city_btn"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cities_display_text"
        android:gravity="center"
        android:layout_below="@+id/search_city_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorBlack" />

    <EditText
        android:text="Chicago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/hintForCityName"
        android:id="@+id/city_name_text"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/current_city_layout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

</RelativeLayout>
